Redirect applicants who haven't completed an eligibility check from the contributions page.
Add text to the two pages that might be shown (the eligibility results
page for folks who have a pending application or the project
contributions page) to explain a little more about the next steps in the
process.

Link to the rounds page in a way that doesn't detract from the applicant
recording contributions and making their final application.

Add the link to the contributions page to the mentor reminder prompt,
but warn them it only works for approved applicants (not mentors).

Fixes #160

--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -288,6 +288,7 @@ Outreachy eligibility results
 	If you have not received a follow up email within a week,
 	please <a href="/contact">contact the Outreachy organizers</a>.
 	</p>
+	<p>You will not be able to record contributions or make a final application until your eligibility form has been approved. Only eligible applicants will be selected as Outreachy interns.</p>
 	{% if user.is_staff %}
 		<h2>Outreachy Organizer Actions</h2>
 		<p>
