--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -25,40 +25,59 @@ Outreachy internships working with {{ community.name }}
 
 {% if approved_projects %}
 	<h1>Open Projects</h1>
-	<p>Mentors for these projects are willing to work with new Outreachy applicants. Please note that as the round goes on, mentors may close their project to new applicants because they are already working with many applicants. Make sure to contact a mentor and start your contribution as soon as possible!</p>
+	<p>Mentors for these projects are willing to work with new Outreachy applicants. Please note that as the round goes on, mentors may close their project to new applicants because they are already working with many applicants. Make sure to start your required contribution as soon as possible!</p>
+	<p>Each project mentor is looking for applicants who have different skill levels. Experience levels are:
+		{% for i in example_skill.EXPERIENCE_CHOICES %}
+			<br><button type="button" class="btn btn-info">{{ forloop.counter }}</button> {{ i.1 }}
+		{% endfor %}
+	</p>
 	{% for project in approved_projects %}
-		<h2>{{ project.short_title }}</h2>
-		{% if project.required_skills %}
-		<p>Skills used or learned in this project:<p>
-		<ul>
-			{% for skill in project.required_skills %}
-				<li>{{ skill.skill }}: {{ skill.get_experience_level_display }}</li>
-			{% endfor %}
-		</ul>
-		{% endif %}
-		{% if request.user.comrade.eligible_application %}
-			{% if project in contributions %}
-				<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Update Contibutions and Apply to This Project</a></p>
+		<div class="card border">
+			<div class="card-header bg-light">
+				Debian project #{{ forloop.counter }}
+			</div>
+			<div class="card-body">
+			{% if not request.user.comrade.eligible_application and not request.user.comrade.approved_mentor_or_coordinator %}
+				<p><strong>{{ project.short_title }}</strong></p>
+				<div class="card-text"><p>Project details are hidden, see the text above.</p></div>
 			{% else %}
-				<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions and Apply to This Project</a></p>
+				<p><strong><a href="#{{ project.slug }}">{{ project.short_title }}</a></strong></p>
 			{% endif %}
-		{% endif %}
-		{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator %}
-			<div id="project-open-accordion-{{ forloop.counter }}" class="accordion">
-				<div class="card">
-					<div class="card-header" role="tab" id="project-open-heading-{{ forloop.counter }}">
-						<h4 class="mb-0"><a data-toggle="collapse" data-parent="project-open-accordion-{{ forloop.counter }}" href="#project-open-{{ forloop.counter }}">+ Detailed Project Information</a></h4>
-					</div>
-					<div class="collapse card-body" id="project-open-{{ forloop.counter }}">
-						{% include "home/snippet/project_landing_snippet.html" %}
+			{% include "home/snippet/project_skills_display.html" %}
+			</div>
+		</div>
+		<br>
+	{% endfor %}
+
+	<h2>Project Details</h2>
+	{% if not request.user.comrade.eligible_application and not request.user.comrade.approved_mentor_or_coordinator %}
+		<p>Project details are hidden, see message above.</p>
+	{% else %}
+		{% for project in approved_projects %}
+			<hr id="{{ project.slug }}">
+			<h2>{{ project.short_title }}</h2>
+			{% if request.user.comrade.eligible_application %}
+				{% if project in contributions %}
+					<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Update Contibutions and Apply to This Project</a></p>
+				{% else %}
+					<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions and Apply to This Project</a></p>
+				{% endif %}
+			{% endif %}
+			{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator %}
+				<div id="project-open-accordion-{{ forloop.counter }}" class="accordion">
+					<div class="card">
+						<div class="card-header" role="tab" id="project-open-heading-{{ forloop.counter }}">
+							<h4 class="mb-0"><a data-toggle="collapse" data-parent="project-open-accordion-{{ forloop.counter }}" href="#project-open-{{ forloop.counter }}">+ Detailed Project Information</a></h4>
+						</div>
+						<div class="collapse card-body" id="project-open-{{ forloop.counter }}">
+							{% include "home/snippet/project_landing_snippet.html" %}
+						</div>
 					</div>
 				</div>
-			</div>
-			<br>
-		{% else %}
-			<p>Project details are hidden, see message above.</p>
-		{% endif %}
-	{% endfor %}
+				<br>
+			{% endif %}
+		{% endfor %}
+	{% endif %}
 {% endif %}
 
 {% if closed_projects %}
@@ -66,13 +85,15 @@ Outreachy internships working with {{ community.name }}
 	<p>These projects are closed to new applicants because the mentors are already working with many applicants. Applicants who are already working with a mentor are encouraged to complete their contributions and submit an application for the project.</p>
 	{% for project in closed_projects %}
 		<h2>{{ project.short_title }}</h2>
-		{% if project.required_skills %}
-		<p>Skills used or learned in this project:<p>
-		<ul>
-			{% for skill in project.required_skills %}
-				<li>{{ skill.skill }}: {{ skill.get_experience_level_display }}</li>
-			{% endfor %}
-		</ul>
+		{% if project.required_skills or project.preferred_skills or project.bonus_skills %}
+			<div class="card border">
+				<div class="card-header bg-light">
+					Project skills
+				</div>
+				<div class="card-body">
+				{% include "home/snippet/project_skills_display.html" %}
+				</div>
+			</div>
 		{% endif %}
 		{% if request.user.comrade.eligible_application %}
 			{% if project in contributions %}
