Move information around so project public channels are first, then mentors, then coordinators
Also add information about asking good questions.
Hopefully this should lead to less strain on the coordinators.

--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -51,8 +51,7 @@ Outreachy Internships | Apply | Pick a Project
 		in the Outreachy application process is to look through the list of
 		participating communities and internship projects, and pick one
 		or two projects that looks interesting to you.  Then you'll
-		contact a mentor and start working on a contribution for the
-		project.
+		start working on a contribution for the project.
 		</p>
 		<p>
 		Only applicants that make a contribution to a project
@@ -80,7 +79,7 @@ Outreachy Internships | Apply | Pick a Project
 		<ul>
 			<li>
 			Introduce yourself to the project's mentor and discuss
-			what your tasks during the internship program would be.
+			the internship tasks or contribution tasks listed in the project details.
 			Outreachy mentors are friendly and welcome your questions!
 			</li>
 			<li>
@@ -112,11 +111,6 @@ Outreachy Internships | Apply | Pick a Project
 			</li>
 			<li>
 			Reading the blogs of the project's mentor and other project contributors.
-			</li>
-			<li>
-			Introduce yourself to the project's mentors. (Yes, we know this is listed
-			twice. It's very important that you communicate with mentors and
-			get to know them.)
 			</li>
 		</ul>
 		<p>
