--- a/home/templates/home/snippet/project_skills_display.html
+++ b/home/templates/home/snippet/project_skills_display.html
@@ -29,4 +29,6 @@
 			</div>
 		{% endfor %}
 	</div></p>
+{% else %}
+	<p class="card-text">The mentor did not list any required, preferred, or nice-to-have skills.</p>
 {% endif %}
