--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -100,6 +100,7 @@ Outreachy internships working with {{ community.name }}
 	<h1>Closed Projects</h1>
 	<p>These projects are closed to new applicants because the mentors are already working with many applicants. Applicants who are already working with a mentor are encouraged to complete their contributions and submit an application for the project.</p>
 	{% for project in closed_projects %}
+		<hr id="{{ project.slug }}">
 		<h2>{{ project.short_title }}</h2>
 		{% if project.required_skills or project.preferred_skills or project.bonus_skills %}
 			<div class="card border">
