Fix community landing page hiding projects if all are late deadlines

--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -23,7 +23,7 @@ Outreachy internships working with {{ community.name }}
 
 {% include "home/snippet/community_landing_snippet.html" %}
 
-{% if ontime_projects %}
+{% if ontime_projects or late_projects %}
 	<h1>Open Projects</h1>
 
 	<p>Mentors for these projects are willing to work with new Outreachy
